Dark mode fix

--- a/style.css
+++ b/style.css
@@ -1,22 +1,25 @@
 body{
-    margin-right: 30%;
-    margin-left: 30%;
+    margin-right: 20%;
+    margin-left: 20%;
 }
-#input{
+#input-group{
     margin-top: 50px;
     margin-right: 10px;
 }
 #create{
-    margin-right: 3px;
-    margin-top: 50px;
+    margin-right: 10px;
+    margin-left: 10px;
     height: 40px;
 }
 #delete{
-    margin-top: 50px;
     height: 40px;
 }
 li:hover{
     background-color: rgb(216, 216, 216);
+}
+
+#testItem{
+    display: none;
 }
 
 
@@ -27,3 +30,69 @@ li:hover{
         margin-left: 10%;
     }
 }
+
+
+
+/* .................................. */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-right: 20px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
